math_parser.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: exp '\n'

    4 exp: NUMBER
    5    | exp ADD exp
    6    | exp SUB exp
    7    | exp MUL exp
    8    | exp DIV exp
    9    | exp POW exp
   10    | SUB exp
   11    | LPAREN exp RPAREN


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3
    error (256)
    NUMBER <num> (258) 4
    ADD (259) 5
    SUB (260) 6 10
    MUL (261) 7
    DIV (262) 8
    POW (263) 9
    LPAREN (264) 11
    RPAREN (265) 11
    UMINUS (266)


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    input (14)
        on left: 1 2
        on right: 0 2
    line <num> (15)
        on left: 3
        on right: 2
    exp <num> (16)
        on left: 4 5 6 7 8 9 10 11
        on right: 3 5 6 7 8 9 10 11


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    line  go to state 6
    exp   go to state 7


State 2

    0 $accept: input $end .

    $default  accept


State 3

    4 exp: NUMBER .

    $default  reduce using rule 4 (exp)


State 4

   10 exp: SUB . exp

    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 8


State 5

   11 exp: LPAREN . exp RPAREN

    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 9


State 6

    2 input: input line .

    $default  reduce using rule 2 (input)


State 7

    3 line: exp . '\n'
    5 exp: exp . ADD exp
    6    | exp . SUB exp
    7    | exp . MUL exp
    8    | exp . DIV exp
    9    | exp . POW exp

    ADD   shift, and go to state 10
    SUB   shift, and go to state 11
    MUL   shift, and go to state 12
    DIV   shift, and go to state 13
    POW   shift, and go to state 14
    '\n'  shift, and go to state 15


State 8

    5 exp: exp . ADD exp
    6    | exp . SUB exp
    7    | exp . MUL exp
    8    | exp . DIV exp
    9    | exp . POW exp
   10    | SUB exp .

    $default  reduce using rule 10 (exp)


State 9

    5 exp: exp . ADD exp
    6    | exp . SUB exp
    7    | exp . MUL exp
    8    | exp . DIV exp
    9    | exp . POW exp
   11    | LPAREN exp . RPAREN

    ADD     shift, and go to state 10
    SUB     shift, and go to state 11
    MUL     shift, and go to state 12
    DIV     shift, and go to state 13
    POW     shift, and go to state 14
    RPAREN  shift, and go to state 16


State 10

    5 exp: exp ADD . exp

    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 17


State 11

    6 exp: exp SUB . exp

    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 18


State 12

    7 exp: exp MUL . exp

    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 19


State 13

    8 exp: exp DIV . exp

    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 20


State 14

    9 exp: exp POW . exp

    NUMBER  shift, and go to state 3
    SUB     shift, and go to state 4
    LPAREN  shift, and go to state 5

    exp  go to state 21


State 15

    3 line: exp '\n' .

    $default  reduce using rule 3 (line)


State 16

   11 exp: LPAREN exp RPAREN .

    $default  reduce using rule 11 (exp)


State 17

    5 exp: exp . ADD exp
    5    | exp ADD exp .
    6    | exp . SUB exp
    7    | exp . MUL exp
    8    | exp . DIV exp
    9    | exp . POW exp

    MUL  shift, and go to state 12
    DIV  shift, and go to state 13
    POW  shift, and go to state 14

    $default  reduce using rule 5 (exp)


State 18

    5 exp: exp . ADD exp
    6    | exp . SUB exp
    6    | exp SUB exp .
    7    | exp . MUL exp
    8    | exp . DIV exp
    9    | exp . POW exp

    MUL  shift, and go to state 12
    DIV  shift, and go to state 13
    POW  shift, and go to state 14

    $default  reduce using rule 6 (exp)


State 19

    5 exp: exp . ADD exp
    6    | exp . SUB exp
    7    | exp . MUL exp
    7    | exp MUL exp .
    8    | exp . DIV exp
    9    | exp . POW exp

    POW  shift, and go to state 14

    $default  reduce using rule 7 (exp)


State 20

    5 exp: exp . ADD exp
    6    | exp . SUB exp
    7    | exp . MUL exp
    8    | exp . DIV exp
    8    | exp DIV exp .
    9    | exp . POW exp

    POW  shift, and go to state 14

    $default  reduce using rule 8 (exp)


State 21

    5 exp: exp . ADD exp
    6    | exp . SUB exp
    7    | exp . MUL exp
    8    | exp . DIV exp
    9    | exp . POW exp
    9    | exp POW exp .

    POW  shift, and go to state 14

    $default  reduce using rule 9 (exp)
